[package]
name = "simple-backroll"
version = "0.1.0"
authors = ["Martin Vilcans <martin@librador.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5.1"
bevy_tasks = "0.5.0"
minifb = "0.19.3"
structopt = "0.3.21"

backroll = {path = "C:/Users/sraya/OneDrive/Documents/GitHub/backroll-rs/backroll"}
backroll_transport = {path = "C:/Users/sraya/OneDrive/Documents/GitHub/backroll-rs/backroll_transport"}
backroll_transport_udp = {path = "C:/Users/sraya/OneDrive/Documents/GitHub/backroll-rs/backroll_transport_udp"}